--- a/MWF/Pages/Donation/DonationList.razor
+++ b/MWF/Pages/Donation/DonationList.razor
@@ -12,9 +12,11 @@
 
 <style>
     .donation {
-        height: 50px;
+        height: auto;
         width: 100%;
         background-color: floralwhite;
+        margin:4px;
+        padding:2px
     }
 
     body {
@@ -64,53 +66,69 @@
 </style>
 
 
-<div class="container donation">
-    <div class="row">
-        <div class="col">
-            <label>Search...</label>
+<EditForm Model="@Model">
+    <div class="container donation">
+        <div class="row">
+            <div class="col-md-6">
+                <div class="form-floating mb-3 ">
+                    <InputText @bind-Value="Model.SearchText" class="form-control" id="txtSearch" placeholder="Type for seach"></InputText>
+                    <label for="txtRef">Search</label>
+                </div>
+            </div>
+            <div class="col-6 d-flex justify-content-end">
+                <button id="btnSearch" class="btn btn-primary" style="height:40px" @onclick="Search">Search</button>
+            </div>
+
         </div>
     </div>
-</div>
 
-
-<table class="table">
-    <thead>
-        <tr>
-            <th>Receipt Number</th>
-            <th>Receipt Date</th>
-            <th>Donor Name</th>
-            <th>Amount</th>
-
-            <th>
-                <button class="action-btn add-btn" @onclick="()=>GoDonation(0)">
-                    <i class="bi bi-plus-circle-fill"></i> <!-- Icon for Add -->
-                </button>
-            </th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var item in Model.DonationList)
-        {
+    <table class="table">
+        <thead>
             <tr>
-                <td>@item.Rec_No</td>
-                <td>@item.Rec_Date.ToString("yyyy-MM-dd")</td>
-                <td>@item.TitleDonor</td>
-                <td style="align-content:end">@item.Amount.ToString("###,###,###.##")</td>
-                <td>
-                    <button class="action-btn edit-btn" @onclick="()=>GoDonation(item.ID)">
-                        <i class="bi bi-pencil-fill"></i>
+                <th style="width:10%">Receipt Number</th>
+                <th style="width:10%">Receipt Date</th>
+                <th style="width:25%">Donor Name</th>
+                <th style="width:25%">Donation Type</th>
+                <th style="width:10%">Amount</th>
+
+                <th style="width:20%">
+                    <button class="action-btn add-btn" @onclick="()=>GoDonation(0)">
+                        <i class="bi bi-plus-circle-fill"></i> <!-- Icon for Add -->
                     </button>
-                    <button class="action-btn delete-btn" @onclick="() => Model.DeleteDonation(item.ID)">
-                        <i class="bi bi-trash3"></i>
-                    </button>
-                    <button class="action-btn print-btn" @onclick="()=> Model.PrintDonation(item.ID)">
-                        <i class="bi bi-printer-fill"></i>
-                    </button>
-                </td>
+                </th>
             </tr>
-        }
-    </tbody>
-</table>
+        </thead>
+        <tbody>
+            @foreach (var item in Model.DonationList)
+            {
+                <tr>
+                    <td>@item.Rec_No</td>
+                    <td>@item.Rec_Date.ToString("yyyy-MM-dd")</td>
+                    <td>@item.TitleDonor</td>
+                    <td>@item.TitleDonationType</td>
+                    <td style="align-content:end">@item.Amount.ToString("###,###,###.##")</td>
+                    <td>
+                        <button class="action-btn edit-btn" @onclick="()=>GoDonation(item.ID)">
+                            <i class="bi bi-pencil-fill"></i>
+                        </button>
+                        <button class="action-btn delete-btn" @onclick="() => Model.DeleteDonation(item.ID)">
+                            <i class="bi bi-trash3"></i>
+                        </button>
+                        <button class="action-btn print-btn" @onclick="()=> Model.PrintDonation(item.ID)">
+                            <i class="bi bi-printer-fill"></i>
+                        </button>
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>
+</EditForm>
 
 @code {
+
+    public void Search()
+    {
+
+    }
+
 }
