HPLT - 28-SEP-2024. Donation Form OK, Menu OK,

--- a/MWF/wwwroot/css/site.css
+++ b/MWF/wwwroot/css/site.css
@@ -8,6 +8,14 @@ html {
         font-size: 16px;
     }
 }
+
+@media (max-width: 768px) {
+    /* Responsive adjustments */
+    .button-container {
+        gap: 10px; /* Reduce space between buttons on smaller screens */
+    }
+}
+
 html {
     position: relative;
     min-height: 100%;
