--- a/MWF/Pages/Index.razor
+++ b/MWF/Pages/Index.razor
@@ -2,44 +2,43 @@
 
 
 
-<PageTitle>Index</PageTitle>
+<PageTitle>MWF</PageTitle>
 
+<div class="container" id="indexPage">
+    <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="4" aria-label="Slide 5"></button>
 
+        </div>
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="/HomePic/pump.jpg" class="d-block w-100" alt="Slider1">
+            </div>
+            <div class="carousel-item">
+                <img src="/GalaryPic/qm.jpg" class="d-block w-100" alt="Slider1">
+            </div>
+            <div class="carousel-item">
+                <img src="/GalaryPic/slider rshn.jpg" class="d-block w-100" alt="Slider1">
+            </div>
 
-
-<div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
-    <div class="carousel-indicators">
-        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
-        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="4" aria-label="Slide 5"></button>
-
+            <div class="carousel-item">
+                <img src="/GalaryPic/slider.jpg" class="d-block w-100" alt="Slider4">
+            </div>
+            <div class="carousel-item">
+                <img src="/GalaryPic/Qurbani2024.jpeg" class="d-block w-100" alt="Slider5">
+            </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+        </button>
     </div>
-    <div class="carousel-inner">
-        <div class="carousel-item active">
-            <img src="/HomePic/pump.jpg" class="d-block w-100" alt="Slider1" >
-        </div>
-        <div class="carousel-item">
-            <img src="/GalaryPic/qm.jpg" class="d-block w-100" alt="Slider1">
-        </div>
-        <div class="carousel-item">
-            <img src="/GalaryPic/slider rshn.jpg" class="d-block w-100" alt="Slider1">
-        </div>
-
-        <div class="carousel-item">
-            <img src="/GalaryPic/slider.jpg" class="d-block w-100" alt="Slider4">
-        </div>
-        <div class="carousel-item">
-            <img src="/GalaryPic/Qurbani2024.jpeg" class="d-block w-100" alt="Slider5">
-        </div>
-    </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
-    </button>
 </div>
