--- a/MWF/Pages/Gallery.razor
+++ b/MWF/Pages/Gallery.razor
@@ -15,6 +15,15 @@
         <div class="row">
         <div class="col-md-4 mb-2">
             <div class="card">
+                <img src="/GalaryPic/Sasti Roti/IMG-20240925-WA0038.jpg" class="card-img-top" alt="Image 2" style="height:100%">
+                <div class="card-body">
+                    <h5 class="card-title">Sasti Roti</h5>
+                    <button type="button" class="btn btn-primary" onclick="window.location.href='/Roti';">Click Here</button>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4 mb-2">
+            <div class="card">
                 <img src="/GalaryPic/Qurbani 2023/QB/qurbani 4 (2).jpg" class="card-img-top" alt="Image 2" style="height:100%">
                 <div class="card-body">
                     <h5 class="card-title">Waqaf Qurbani</h5>
