--- a/MWF/Pages/Sadqa Bakra/Sadqa Bakra.razor
+++ b/MWF/Pages/Sadqa Bakra/Sadqa Bakra.razor
@@ -9,6 +9,8 @@
 
 <div class="container">
     <div class="row imgcard d-flex gap-4 flex-wrap justify-content-center mb-4">
+        <img src="/GalaryPic/Sadqa Bakra/Bakra38.jpg" alt="" />
+        <img src="/GalaryPic/Sadqa Bakra/Bakra37.jpg" alt="" />
         <img src="/GalaryPic/Sadqa Bakra/Bakra36.jpg" alt="" />
         <img src="/GalaryPic/Sadqa Bakra/Bakra35.jpg" alt="" />
         <img src="/GalaryPic/Sadqa Bakra/Bakra34.jpg" alt="" />
