--- a/MWF/Pages/Opening.razor
+++ b/MWF/Pages/Opening.razor
@@ -8,6 +8,9 @@
 
 <div class="container">
     <div class="row imgcard d-flex gap-4 flex-wrap justify-content-center mb-4">
+        <img src="/GalaryPic/dispensary/dispensary37.jpg" alt="" />
+        <img src="/GalaryPic/dispensary/dispensary36.jpg" alt="" />
+        <img src="/GalaryPic/dispensary/dispensary35.jpg" alt="" />
         <img src="/GalaryPic/dispensary/dispensary34.jpg" alt="" />
         <div class="ant-ribbon-wrapper">
             <div class="ant-card ant-card-bordered media_card">
