--- a/MWF/Pages/About.razor
+++ b/MWF/Pages/About.razor
@@ -98,7 +98,7 @@
         <div class="about-content">
             <h2 style="position: center;">Welcome to the <br><span style="font-weight: bold;">Mumtaz Welfare Foundation</span></h2>
             <p>
-                The Largest NGO 
+                The NGO 
                 Mumtaz Welfare is on the ground and already working with local communities to assess how best to support underprivileged families in more than areas of day to day lives.
             </p>
             <a href="/Gallery" class="btn-L"><i class="fas fa-arrow-right"></i>Learn More
