--- a/MWF/Pages/Footer/MumtazFooter.razor
+++ b/MWF/Pages/Footer/MumtazFooter.razor
@@ -10,8 +10,38 @@
 
 
 <div class="footer1">
-    <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
-        <h5 class="text-uppercase mb-4 font-weight-bold text-warning">Account</h5>
+    <div class="container text-center text-md-left">
+        <div class="row text-center text-md-left">
+            <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3">
+                <h5 class="text-uppercase mb-4 font-weight-bold text-warning">Quick Links</h5>
+                <p>
+                    <a href="#" class="text-white" style="text-decoration:none;"><i class="bi bi-arrow-right" style="letter-spacing:10px"></i>Home</a>
+                </p>
+                <p>
+                    <a href="/About" class="text-white" style="text-decoration:none;"><i class="bi bi-arrow-right" style="letter-spacing:10px"></i>About</a>
+                </p>
+                <p>
+                    <a href="/Gallery" class="text-white" style="text-decoration:none;"><i class="bi bi-arrow-right" style="letter-spacing:10px"></i>Gallery</a>
+                </p>
+                <p>
+                    <a href="/Review" class="text-white" style="text-decoration:none;"><i class="bi bi-arrow-right" style="letter-spacing:10px"></i>Review</a>
+                </p>
+                <p>
+                    <a href="/Receipt" class="text-white" style="text-decoration:none;"><i class="bi bi-arrow-right" style="letter-spacing:10px"></i>Receipt</a>
+                </p>
+                <p>
+                    <a href="/Contact" class="text-white" style="text-decoration:none;"><i class="bi bi-arrow-right" style="letter-spacing:10px"></i>Contact</a>
+                </p>
+                <p>
+                    <a href="/" class="text-white" style="text-decoration:none;"><i class="bi bi-arrow-right" style="letter-spacing:10px"></i>Archived</a>
+                </p>
+                <p>
+                    <a href="https://donate.mumtazwelfare.org" class="text-white" style="text-decoration:none;"><i class="bi bi-arrow-right" style="letter-spacing:10px"></i>Donate</a>
+                </p>
+            </div>
+            
+            <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3">
+    <h5 class="text-uppercase mb-4 font-weight-bold text-warning">Account</h5>
         <p>
             <a href="#" class="text-white" style="text-decoration:none;">
                 <img src="/GalaryPic/JS BANK logo.jpg" style=height:"120vh"; alt="JS BANK" width="100px">
@@ -23,10 +53,11 @@
         <p>
             <a href="#" class="text-white" style="text-decoration:none;">IBAN: PK88 JSBL 9606 0000 0152 8035</a>
         </p>
-
+   
     </div>
+                
     <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3">
-        <h5 class="text-uppercase mb-4 font-weight-bold text-warning">Contact</h5>
+                <h5 class="text-uppercase mb-4 font-weight-bold text-warning">Contact</h5>
 
         <p>
             <a href="https://wa.me/qr/XV3Z5SZHCQH7A1" class="text-white" style="font-size: 15px" ;>
@@ -58,8 +89,48 @@
                 0347-9270155
             </a>
         </p>
-
-
     </div>
 </div>
+        
+<hr class="mb-4" style="color:white">
 
+        <div class="row align-items-center">
+            <div class="col-md-7 col-lg-8">
+                <p style="text-align:right; color: white">
+                    Copyright 2023   
+                    <a href="https://www.mumtazwelfare.org/" style="text-decoration:none;">
+                        <strong class="text-warning">  Mumtaz Welfare Foundation  </strong>
+                    </a>
+                </p>
+            </div>
+
+            <div class="col-md-5 col-lg-4">
+                <div class="text-center text-md-right">
+
+                    <ul class="list-unstyled list-inline">
+                        <li class="list-inline-item">
+                            <a href="https://wa.me/qr/XV3Z5SZHCQH7A1" class="btn-floating btn-sm text-white" style="font-size: 23px;">
+                                <i class="bi bi-whatsapp"></i>
+                            </a>
+                        </li>
+                        <li class="list-inline-item">
+                            <a href="https://www.facebook.com/Mumtazwelfare.pk" class="btn-floating btn-sm text-white" style="font-size: 23px;">
+                                <i class="bi bi-facebook"></i>
+                            </a>
+                        </li>
+                        <li class="list-inline-item">
+                            <a href="https://www.instagram.com/mumtaz_welfare/" class="btn-floating btn-sm text-white" style="font-size: 23px;">
+                                <i class="bi bi-instagram"></i>
+                            </a>
+                        </li>
+                        <li class="list-inline-item">
+                            <a href="" class="btn-floating btn-sm text-white" style="font-size: 23px;">
+                                <i class="bi bi-envelope"></i>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+    </div>
