--- a/MWF/Pages/Index.razor
+++ b/MWF/Pages/Index.razor
@@ -12,10 +12,14 @@
             <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
             <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
             <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="4" aria-label="Slide 5"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="5" aria-label="Slide 6"></button>
 
         </div>
         <div class="carousel-inner">
             <div class="carousel-item active">
+                <img src="/GalaryPic/IMG-20240925-WA0004.jpg" class="d-block w-100" alt="Slider6">
+            </div>
+            <div class="carousel-item">
                 <img src="/HomePic/pump.jpg" class="d-block w-100" alt="Slider1">
             </div>
             <div class="carousel-item">
@@ -30,6 +34,9 @@
             </div>
             <div class="carousel-item">
                 <img src="/GalaryPic/Qurbani2024.jpeg" class="d-block w-100" alt="Slider5">
+            </div>
+            <div class="carousel-item">
+                <img src="/GalaryPic/IMG-20240925-WA0004.jpg" class="d-block w-100" alt="Slider6">
             </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
