--- a/MWF/Pages/Madarsa Food.razor
+++ b/MWF/Pages/Madarsa Food.razor
@@ -8,6 +8,11 @@
 
 <div class="container">
     <div class="row imgcard d-flex gap-4 flex-wrap justify-content-center mb-4">
+        <img src="/GalaryPic/food/food40.jpg" alt="" />
+        <img src="/GalaryPic/food/food39.jpg" alt="" />
+        <img src="/GalaryPic/food/food38.jpg" alt="" />
+        <img src="/GalaryPic/food/food37.jpg" alt="" />
+        <img src="/GalaryPic/food/food36.jpg" alt="" />
         <img src="/GalaryPic/food/food35.jpg" alt="" />
         <div class="ant-ribbon-wrapper">
             <div class="ant-card ant-card-bordered media_card">
